--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mvxxs-movies",
   "version": "0.1.0",
-  "homepage": "https://mvxxs.github.io/movies-explorer-frontend/",
+  "homepage": "http://mvxxs-movies.nomoredomainsrocks.ru/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
